test_cases/tests/axum/invalid_attrs.stderr
error: unknown argument
 --> tests/axum/invalid_attrs.rs:3:17
  |
3 | #[debug_handler(foo)]
  |                 ^^^
